recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:9: error: not found: value a
      if(l.head==a) { return true }
                 ^IsMember:10: error: not enough arguments for method isMember: (l: List[Int], v: Int)Boolean.
Unspecified value parameter v.
      else { return isMember(l.tail) }
                            ^