recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if(l==Nil)
  	{
      return false
    }
  else
  	{
      if(l.head==a) { return true }
      else { return isMember(l.tail) }
    }
}